fixed list item form spacing on top

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,7 +134,9 @@ body {
   min-height: 5rem;
   display: none;
 }
-
+#listItemCreateForm p {
+  margin-top: 10px;
+}
 #listItemCreateForm {
   display: flex;
   justify-content: center;
